Ready for Final Checks

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="quote"> At Group L, Stoffel oversees six first-rate programmers, a managerial challenge roughly equivalent to herding cats.</p>
+        <p class="source">Unknown Author<span class="citation">The Washington Post Magazine</span><span class="year">June 9th, 1985</span><span class="category"> : Programming </p>
       </div>
     </div>
     
